Add Rebrandly API Key to templated secrets

--- a/templates/secrets.json.template
+++ b/templates/secrets.json.template
@@ -1,4 +1,5 @@
 {
     "OATH_ACCESS_TOKEN": "some_access_token",
-    "BOT_USER_ACCESS_TOKEN": "some_access_token"
+    "BOT_USER_ACCESS_TOKEN": "some_access_token",
+    "REBRANDLY_API_KEY": "some_api_key"
 }
